src/Test/Fixtures/Good/Types/noSpacesI16RepeatArrayTypeDeclaration.lf
let zeros:[i16;8]=[0;8];