src/Test/Fixtures/Bad/Arrays/missingSemicolonInRepeatArrayDeclaration.lf
let zeros: [i32; 3] = [0 3];